<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:mt_hint="@string/action_search"
        app:mt_placeholder="@string/search_hint"
        app:mt_speechMode="true" />


    <ScrollView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pagination"
        android:layout_below="@+id/search_bar"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Search"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/fold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_less"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/search_loading_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="visible" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:text="@string/api_error" />

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/pagination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:weightSum="100">


        <Button
            android:id="@+id/prev_button"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="25"
            android:background="@drawable/round_corner"
            android:text="@string/navigate_prev"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/search_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:visibility="gone" />

        <Button
            android:id="@+id/jump_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:text="@string/jump_page"
            android:visibility="gone" />

        <TextView
            android:id="@+id/show_page"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:autoSizeMaxTextSize="80sp"
            android:autoSizeMinTextSize="12sp"
            android:gravity="center_vertical"
            android:text="Page"
            android:visibility="gone"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="25"
            android:background="@drawable/round_corner"
            android:text="@string/navigate_next"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>