<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:mt_hint="@string/action_search"
        app:mt_placeholder="@string/search_hint"
        app:mt_speechMode="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/error_message_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/api_error" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/refresh_button"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_corner"
                android:src="@drawable/ic_refresh"
                android:visibility="gone"/>

        </LinearLayout>

        <ScrollView
            android:id="@+id/home_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="DnD"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/load_more_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:contentDescription="more"
                        android:src="@drawable/ic_more"
                        app:layout_constraintStart_toEndOf="@id/textView"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginBottom="20dp">

                    <ProgressBar
                        android:id="@+id/dnd_loading_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_dnd_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rpg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="RPG"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/load_more_rpg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:src="@drawable/ic_more"
                        app:layout_constraintStart_toEndOf="@id/rpg"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginBottom="20dp">

                    <ProgressBar
                        android:id="@+id/rpg_loading_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_rpg_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="Dice"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/load_more_dice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:src="@drawable/ic_more"
                        app:layout_constraintStart_toEndOf="@id/dice"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginBottom="20dp">

                    <ProgressBar
                        android:id="@+id/dice_loading_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_dice_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/books"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="Miniatures"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/load_more_books"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:src="@drawable/ic_more"
                        app:layout_constraintStart_toEndOf="@id/books"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginBottom="20dp">

                    <ProgressBar
                        android:id="@+id/book_loading_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_book_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/merchandise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="Merchandise"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/load_more_merchandise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:src="@drawable/ic_more"
                        app:layout_constraintStart_toEndOf="@id/merchandise"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginBottom="20dp">

                    <ProgressBar
                        android:id="@+id/merchandise_loading_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_merchandise_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </FrameLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>
